syntax = 'proto3';

package com.acreom.ai;

// The AI service definition.
service AI {
  // initialize ai assistant
  rpc Initialize(InitializeRequest) returns (InitializeReply) {}
  // index entities
  rpc Index (IndexRequest) returns (IndexReply) {}
  // process ai assistant task
  rpc Task (TaskRequest) returns (stream TaskReply) {}
}

// The request message containing initialization data
message InitializeRequest {
  string model_path = 1;
  string embedding_path = 2;
}

// The reply message containing the initialization status
message InitializeReply {
  string status = 1;
}

// The request message containing the entity data
message EntityData {
  string id = 1;
  string title = 2;
  string content = 3;
}

// The request message containing the data for ai indexing
message IndexRequest {
  string vault_id = 1;
  string action = 2;
  repeated EntityData data = 3;
}

// The reply message for indexing
message IndexReply {}

// The request message containing the data for ai assistant service.
message TaskRequest {
  string data = 1;
  string tasks = 2;
  string context = 3;
}

// The reply message containing metadata of a source document
message metadata {
    string id = 1;
    string title = 2;
}

// The response message containing the ai assistant response.
message TaskReply {
  string text = 1;
  repeated metadata sourceDocuments = 2;
}